--- a/task2.ipynb
+++ b/task2.ipynb
@@ -179,10 +179,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "expected ':' (2983309708.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[13], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    for j in range()\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected ':'\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(img[row, column]):\n",
+    "    for j in range()"
+   ]
   },
   {
    "cell_type": "markdown",
